--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="~/Content/themes/admin-nb/css/font.css" type="text/css" />
     <link rel="stylesheet" href="~/Content/themes/admin-nb/css/app.css" type="text/css" />
     @RenderSection("styles", required: false)
+
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
 </head>
 <body>
     <header id="header" class="app-header navbar" role="menu">
@@ -316,6 +319,8 @@
     <script src="~/Content/themes/admin-nb/libs/jquery/jquery/dist/jquery.js"></script>
     <!-- Bootstrap -->
     <script src="~/Content/themes/admin-nb/libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
+    <!-- Angular -->
+    <script src="~/Content/themes/angular/myApp.js"></script>
     <!-- App -->
     <script src="~/Content/themes/admin-nb/js/ui-load.js"></script>
     <script src="~/Content/themes/admin-nb/js/ui-jp.config.js"></script>
