--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -273,7 +273,7 @@
                                         </a>
                                     </li>
                                     <li class="@ViewBag.navbar.lstOptions[3].lstOptions[5].cadena">
-                                        <a @Url.Action("Periodos", "Admin")>
+                                        <a href="@Url.Action("Periodos", "Admin")">
                                             <span>Periodos</span>
                                         </a>
                                     </li>
