--- a/NubeBooks/Views/Admin/Comprobante.cshtml
+++ b/NubeBooks/Views/Admin/Comprobante.cshtml
@@ -393,7 +393,9 @@
                                     @{var btnName = (Model != null && Model.IdEntidadResponsable > 0) ? "Guardar Cambios" : "Crear";}
                                     @if (!ViewBag.EsUsuarioExterno)
                                     {<button type="submit" class="btn btn-sm btn-success" onclick="return ListaMontosAreas();">@btnName</button>}
-                                    <a class="btn btn-sm btn-danger" href="@Url.Action("Comprobantes", "Admin", new { idTipoComprobante = Model.IdTipoComprobante })">Salir</a>
+                                    @*<a class="btn btn-sm btn-danger" href="@Url.Action("Comprobantes", "Admin", new { idTipoComprobante = Model.IdTipoComprobante })">Salir</a>*@
+                                    @{string tipo = (Model.IdTipoComprobante == 1) ? "Ingreso" : "Egreso"; }
+                                    <a class="btn btn-sm btn-danger" href="@Url.Action("Comprobantes" + tipo, "Admin")">Salir</a>
                                 </div>
                             </section>
                         </div>
