--- a/NubeBooks/Views/Admin/ComprobantesIngreso.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesIngreso.cshtml
@@ -4,14 +4,6 @@
 @{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-
-@section scripts{
-    @*@Scripts.Render("~/Content/themes/admin/js/datatables/languageConf.js")*@
-
-    <script type="text/javascript">
-    </script>
-}
-
 <div class="bg-light lter b-b wrapper-md">
     <button class="btn m-b-xs btn-sm btn-info btn-addon pull-right m-l"><i class="fa fa-cloud-download"></i>Exportar</button>
     <button class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</button>
@@ -42,14 +34,14 @@
 }" class="table table-striped b-t b-b dataTable">
                 <thead>
                     <tr>
-                        <th style="width:10%">Fecha</th>
-                        <th style="width:10%">Documento</th>
-                        <th style="width:10%">Número</th>
-                        <th style="width:20%">Cliente</th>
-                        <th style="width:10%">Monto</th>
-                        <th style="width:15%">Partida</th>
-                        <th style="width:5%">Estado</th>
-                        <th style="width:10%">Opc.</th>
+                        <th class="text-center" style="width:10%">Fecha</th>
+                        <th class="text-center" style="width:10%">Documento</th>
+                        <th class="text-center" style="width:10%">Número</th>
+                        <th class="text-center" style="width:20%">Cliente</th>
+                        <th class="text-center" style="width:10%">Monto</th>
+                        <th class="text-center" style="width:15%">Partida</th>
+                        <th class="text-center" style="width:5%">Estado</th>
+                        <th class="text-center" style="width:10%">Opc.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -58,15 +50,15 @@
                         foreach (var item in Model)
                         {
                             <tr>
-                                <td>@item.FechaEmision</td>
-                                <td>@item.NombreTipoDocumento</td>
-                                <td>@item.NroDocumento</td>
-                                <td>@item.NombreEntidad</td>
-                                <td>@item.Monto</td>
-                                <td>@item.NombreCategoria</td>
-                                <td>@item.Estado</td>
+                                <td class="text-center">@item.FechaEmision.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
+                                <td class="text-center">@item.NombreTipoDocumento</td>
+                                <td class="text-center">@item.NroDocumento</td>
+                                <td class="text-center">@item.NombreEntidad</td>
+                                <td class="text-right">@item.Monto.ToString("N2", CultureInfo.InvariantCulture)</td>
+                                <td class="text-center">@item.NombreCategoria</td>
+                                <td class="text-center" style=@(item.Ejecutado ? "color:#8EC100;" : "color:red;")>@(item.Ejecutado ? "R" : "P" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
-                                <td>
+                                <td class="text-center">
                                     <a href="@Url.Action("Comprobante", "Admin", new { id = item.IdComprobante })"><i class="fa fa-@rIcon" title="@rTitle"></i></a>&nbsp;
                                     @if (!ViewBag.EsUsuarioExterno)
                                     {<a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@item.IdComprobante" data-nro="@item.NroDocumento"><i class="fa fa-times" title="Eliminar"></i></a>}
