--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -201,7 +201,7 @@
                                 </a>
                             </li>
                             <li class="@ViewBag.navbar.lstOptions[3].lstOptions[2].cadena">
-                                <a href="@Url.Action("Entidades", "Admin")" class="auto">
+                                <a href="@Url.Action("EntidadesClientes", "Admin")" class="auto">
                                     <span class="pull-right text-muted">
                                         <i class="fa fa-fw fa-angle-right text"></i>
                                         <i class="fa fa-fw fa-angle-down text-active"></i>
@@ -212,17 +212,17 @@
                                 </a>
                                 <ul class="nav nav-sub dk">
                                     <li class="nav-sub-header">
-                                        <a href="@Url.Action("Entidades", "Admin")">
+                                        <a href="@Url.Action("EntidadesClientes", "Admin")">
                                             <span>Entidades</span>
                                         </a>
                                     </li>
                                     <li class="@ViewBag.navbar.lstOptions[3].lstOptions[2].cadena">
-                                        <a href="@Url.Action("Entidades", "Admin", new { idTipoEntidad = 1 })">
+                                        <a href="@Url.Action("EntidadesClientes", "Admin")">
                                             <span>Clientes</span>
                                         </a>
                                     </li>
                                     <li class="@ViewBag.navbar.lstOptions[3].lstOptions[2].cadena">
-                                        <a href="@Url.Action("Entidades", "Admin", new { idTipoEntidad = 2 })">
+                                        <a href="@Url.Action("EntidadesProveedores", "Admin")">
                                             <span>Proveedores</span>
                                         </a>
                                     </li>
