--- a/NubeBooks/Views/Admin/EntidadesProveedores.cshtml
+++ b/NubeBooks/Views/Admin/EntidadesProveedores.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="bg-light lter b-b wrapper-md">
-    <button class="btn m-b-xs btn-sm btn-info btn-addon pull-right m-l"><i class="fa fa-cloud-download"></i>Exportar</button>
+    @*<button class="btn m-b-xs btn-sm btn-info btn-addon pull-right m-l"><i class="fa fa-cloud-download"></i>Exportar</button>*@
     <a href="@Url.Action("Entidad", "Admin", new { id = 0, idTipoEntidad = 2 })" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>
     <h1 class="m-n font-thin h3">@ViewBag.Title</h1>
 </div>
