--- a/NubeBooks/Views/Admin/LibrosAdministrativos.cshtml
+++ b/NubeBooks/Views/Admin/LibrosAdministrativos.cshtml
@@ -1,10 +1,13 @@
-﻿@model IList<NubeBooks.Core.DTO.HonorarioDTO>
-@{ 
+﻿@using NubeBooks.Core.DTO
+@using System.Globalization;
+@model IList<NubeBooks.Core.DTO.CuentaBancariaDTO>
+@{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
+
 <div class="bg-light lter b-b wrapper-md">
-    @*<button class="btn m-b-xs btn-sm btn-info btn-addon pull-right m-l"><i class="fa fa-cloud-download"></i>Exportar</button>*@
-    <a href="@Url.Action("Honorario")" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>
+    <button class="btn m-b-xs btn-sm btn-info btn-addon pull-right m-l"><i class="fa fa-cloud-download"></i>Exportar</button>
+    <a href="@Url.Action("Libro", "Admin", new { id = 0, idTipoCuenta = 2 })" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>
     <h1 class="m-n font-thin h3">@ViewBag.Title</h1>
 </div>
 <div class="wrapper-md">
@@ -29,9 +32,11 @@
 }" class="table table-striped b-t b-b dataTable">
                 <thead>
                     <tr>
-                        <th>Nombre</th>
+                        <th class="text-center" style="width:25%">Nombre</th>
+                        <th class="text-center" style="width:25%">Fecha</th>
+                        <th class="text-center">Saldo Total</th>
                         <th class="text-center" style="width:10%">Estado</th>
-                        <th class="text-center" style="width:20%">Opc.</th>
+                        <th class="text-center" style="width:10%">Opc.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -40,16 +45,20 @@
                         foreach (var item in Model)
                         {
                             <tr>
-                                <td>@item.Nombre</td>
+                                <td >@item.NombreCuenta</td>
+                                <td class="text-center">@item.FechaConciliacion.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
+                                <td class="text-right">@item.SimboloMoneda @item.SaldoDisponible.ToString("N2", CultureInfo.InvariantCulture)</td>
                                 <td class="text-center">@(item.Estado ? "Activo" : "Inactivo" )</td>
+                                @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
                                 <td class="text-center">
-                                    <a href="@Url.Action("Honorario", new { id = item.IdHonorario })"><i class="fa fa-pencil"></i></a>
+                                    <a href="@Url.Action("Libro", "Admin", new { id = item.IdCuentaBancaria })"><i class="fa fa-@rIcon" title="@rTitle"></i></a>
                                 </td>
                             </tr>
-                        }
-                    }
+                                        }
+                                    }
                 </tbody>
             </table>
         </div>
     </div>
 </div>
+
